adding link to Sarahs

--- a/bio.html
+++ b/bio.html
@@ -10,6 +10,7 @@
             <a class="name" href="index.html">John Holtgreive</a>
             <ul>
                 <li tabindex="0"><a href="index.html">Home</a></li>
+                <li tabindex="0"><a href="sarah-facts.html">Extra</a></li>
                 <li aria-current="page" tabindex="1"><a class="navbar-link" href="bio.html">About Me</a> </li>
                 <li tabindex="2"><a class="navbar-link" href="https://drive.google.com/file/d/1hiawR-_hITnkLs9hWSbqoUfYSBvUNLxf/view?usp=sharing">
                     Resume</a></li>
